--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="https://s2.googleusercontent.com/s2/favicons?domain=www.nasa.gov">
-    <title>NASA ED</title>
+    <title>NASA API Pictures</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="https://s2.googleusercontent.com/s2/favicons?domain=www.nasa.gov">
+    <!-- ZTM Favicon -->
+    <!-- <link rel="icon" type="image/png" href="favicon.png"> -->
 </head>
 
 <body>
-
+    <div class="loader hidden">
+        <img src="rocket.svg" alt="">
+    </div>
+    <!-- Script -->
+    <script src="script.js"></script>
 </body>
 
-</html>l
+</html>
