--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
     <div class="loader hidden">
         <img src="rocket.svg" alt="">
     </div>
+    <div class="container">
+        <div class="navigation-container">
+            <span class="background"></span>
+            <span class="navigation-items" id="resultsNav">
+                <h3 class="clickable">Favorites</h3>
+                <h3>&nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;</h3>
+                <h3 class="clickable">Load more</h3>
+            </span>
+            <div class="navigation-items hidden" id="favoritesNav">
+                <h3 class="clickable">More NASA</h3>
+            </div>
+        </div>
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
