--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>NASA API Pictures</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="https://s2.googleusercontent.com/s2/favicons?domain=www.nasa.gov">
-    <!-- ZTM Favicon -->
-    <!-- <link rel="icon" type="image/png" href="favicon.png"> -->
 </head>
 
 <body>
@@ -27,8 +25,29 @@
                 <h3 class="clickable">More NASA</h3>
             </div>
         </div>
+        <div class="images-container">
+            <div class="card">
+                <a href="" title="View Full Image" target="_blank">
+                    <img src="" alt="NASA pic" class="card-img-top">
+                </a>
+                <div class="card-body">
+                    <h5 class="card-title">Title</h5>
+                    <p class="clickable">add</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto vitae
+                        perferendis ducimus, necessitatibus neque, perspiciatis impedit distinctio consequatur
+                        asperiores eius a, possimus blanditiis beatae quos hic. Nobis in tempora aliquid?</p>
+                    <small class="text-muted">
+                        <strong>12-12-30</strong>
+                        <span>Copyright</span>
+                    </small>
+                </div>
+            </div>
+        </div>
     </div>
-    <!-- Script -->
+    <div class="save-confirmed">
+        <h1>ADDED!</h1>
+    </div>
+
     <script src="script.js"></script>
 </body>
 
