dinamic population of DOM

--- a/index.html
+++ b/index.html
@@ -25,24 +25,7 @@
                 <h3 class="clickable">More NASA</h3>
             </div>
         </div>
-        <div class="images-container">
-            <div class="card">
-                <a href="" title="View Full Image" target="_blank">
-                    <img src="" alt="NASA pic" class="card-img-top">
-                </a>
-                <div class="card-body">
-                    <h5 class="card-title">Title</h5>
-                    <p class="clickable">add</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto vitae
-                        perferendis ducimus, necessitatibus neque, perspiciatis impedit distinctio consequatur
-                        asperiores eius a, possimus blanditiis beatae quos hic. Nobis in tempora aliquid?</p>
-                    <small class="text-muted">
-                        <strong>12-12-30</strong>
-                        <span>Copyright</span>
-                    </small>
-                </div>
-            </div>
-        </div>
+        <div class="images-container"></div>
     </div>
     <div class="save-confirmed">
         <h1>ADDED!</h1>
