setting local storage

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="images-container"></div>
     </div>
-    <div class="save-confirmed hidden">
+    <div class="save-confirmed" hidden>
         <h1>ADDED!</h1>
     </div>
 
