--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <div class="navigation-container">
             <span class="background"></span>
             <span class="navigation-items" id="resultsNav">
-                <h3 class="clickable">Favorites</h3>
+                <h3 class="clickable" onclick="updateDOM('favorites')">Favorites</h3>
                 <h3>&nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;</h3>
-                <h3 class="clickable">Load more</h3>
+                <h3 class="clickable" onclick="getNasaImg()">Load more</h3>
             </span>
             <div class="navigation-items hidden" id="favoritesNav">
-                <h3 class="clickable">More NASA</h3>
+                <h3 class="clickable" onclick="getNasaImg()">Back to results</h3>
             </div>
         </div>
         <div class="images-container"></div>
